--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,8 @@ dependencies {
 
     //Splash Screen API
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+
+    //Navigation
+    def nav_version = "2.5.0"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 }
