--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,13 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
-        hilt_version = '2.40.5'
-    }
-    dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        compose_version = '1.1.0-beta01'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
