Add swipe actions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     implementation("androidx.room:room-runtime:2.4.2")
     kapt("androidx.room:room-compiler:2.4.2")
     implementation "androidx.room:room-ktx:2.4.2"
+
+    implementation "me.saket.swipe:swipe:1.0.0"
+
 }
